--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,4 @@ loadAppModule()
 //loadJeeModule()
 //loadInteriewModule()
 //loadAlgorithmsModule()
-loadGoogleSampleModule()
+//loadGoogleSampleModule()
