--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -7,6 +7,7 @@ private void loadLibModules() {
     include ':LibModules:commonlib'
     include ':LibModules:CommonAlgorithmLib'
     include ':LibModules:CammeraViewLib'
+    include ':LibModules:JCameraViewLib'
 }
 
 private void loadAppModules() {
