--- a/GoogleSampleModules/GCamera/src/main/AndroidManifest.xml
+++ b/GoogleSampleModules/GCamera/src/main/AndroidManifest.xml
@@ -5,15 +5,21 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
 
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:name="com.example.common.corel.BaseApp"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
@@ -29,6 +35,11 @@
         </activity>
 
         <activity android:name=".activity.JCameraViewActivity"/>
+        <activity android:name=".activity.JCameraView2Activity"/>
+        <activity
+                android:name=".activity.GoogleCameraViewActivity"
+                android:theme="@style/GoogleStyle"
+                />
     </application>
 
 </manifest>
