--- a/GoogleSampleModules/GCamera/src/main/AndroidManifest.xml
+++ b/GoogleSampleModules/GCamera/src/main/AndroidManifest.xml
@@ -16,28 +16,28 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
 
     <!-- 4.2以上的手机需要的权限 -->
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
-    <uses-permission android:name="android.permission.RESTART_PACKAGES" />
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
+    <uses-permission android:name="android.permission.RESTART_PACKAGES"/>
     <!-- 访问INTERNET的权限 -->
-    <uses-permission android:name="android.permission.INTERNET" >
+    <uses-permission android:name="android.permission.INTERNET">
     </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE">
     </uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE">
     </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE">
     </uses-permission>
     <!-- 手机信息 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" >
+    <uses-permission android:name="android.permission.READ_PHONE_STATE">
     </uses-permission>
     <!-- ************************************* -->
     <!-- 在SD卡中创建文件与删除文件权限 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <!-- 传感器 -->
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <!-- 摄像头权限 -->
-    <uses-permission android:name="com.meilapp.meila.permission.MIPUSH_RECEIVE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.meilapp.meila.permission.MIPUSH_RECEIVE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
             android:allowBackup="true"
@@ -60,10 +60,14 @@
 
         <activity android:name=".activity.JCameraViewActivity"/>
         <activity android:name=".activity.JCameraView2Activity"/>
+
         <activity
                 android:name=".activity.GoogleCameraViewActivity"
-                android:theme="@style/GoogleStyle"
-                />
+                android:theme="@style/GoogleStyle"/>
+
+        <activity
+                android:name=".activity.CustomerGoogleCamerViewActivity"
+                android:theme="@style/GoogleStyle"/>
     </application>
 
 </manifest>
