--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 apply from: "ext.gradle"
 
 buildscript {
-    
+    ext.kotlin_version = '1.1.60'
     repositories {
         google()
         jcenter()
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // 配置自动上传符号表插件，注：为了能快速并准确地定位用户APP发生Crash的代码位置，Bugly使用符号表对APP发生Crash的程序堆栈进行解析和还原
         classpath 'com.tencent.bugly:symtabfileuploader:1.3.9'
