--- a/ext.gradle
+++ b/ext.gradle
@@ -15,6 +15,10 @@ project.ext {
             versionName      : "1.0"
     ]
 
+    _kotlin = [
+            kotlin_version : "1.1.60"
+    ]
+
     /*ui*/
     def supportLibraryVersion = "26.1.0"
     support = [
