--- a/ext.gradle
+++ b/ext.gradle
@@ -16,7 +16,7 @@ project.ext {
     ]
 
     _kotlin = [
-            kotlin_version : "1.1.60"
+            kotlin_version: "1.1.60"
     ]
 
     /*ui*/
@@ -47,59 +47,65 @@ project.ext {
     /*扩展工具*/
     ext_tools = [
             /*rx*/
-            rxjava                       : 'io.reactivex.rxjava2:rxjava:2.1.3',
-            rxandroid                    : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+            rxjava                  : 'io.reactivex.rxjava2:rxjava:2.1.3',
+            rxandroid               : 'io.reactivex.rxjava2:rxandroid:2.0.1',
 
             /*retrofit*/
-            retrofit                     : "com.squareup.retrofit2:retrofit:$retrofitLiVersion",
-            converter_gson               : "com.squareup.retrofit2:converter-gson:$retrofitLiVersion",
-            adapter_rxjava2              : "com.squareup.retrofit2:adapter-rxjava2:$retrofitLiVersion",
-            converter_scalars            : 'com.squareup.retrofit2:converter-scalars:2.3.0',
+            retrofit                : "com.squareup.retrofit2:retrofit:$retrofitLiVersion",
+            converter_gson          : "com.squareup.retrofit2:converter-gson:$retrofitLiVersion",
+            adapter_rxjava2         : "com.squareup.retrofit2:adapter-rxjava2:$retrofitLiVersion",
+            converter_scalars       : 'com.squareup.retrofit2:converter-scalars:2.3.0',
 
             /*okhttp*/
-            okhttp                       : "com.squareup.okhttp3:okhttp:$okhttpLibVersion",
-            okhttp_urlconnection         : "com.squareup.okhttp3:okhttp-urlconnection:$okhttpLibVersion",
-            logging_interceptor          : "com.squareup.okhttp3:logging-interceptor:$okhttpLibVersion",
-            okhttp_mockwebserver         : "com.squareup.okhttp3:mockwebserver:$okhttpLibVersion",
+            okhttp                  : "com.squareup.okhttp3:okhttp:$okhttpLibVersion",
+            okhttp_urlconnection    : "com.squareup.okhttp3:okhttp-urlconnection:$okhttpLibVersion",
+            logging_interceptor     : "com.squareup.okhttp3:logging-interceptor:$okhttpLibVersion",
+            okhttp_mockwebserver    : "com.squareup.okhttp3:mockwebserver:$okhttpLibVersion",
 
             /*dagger*/
-            dagger                       : "com.google.dagger:dagger:$daggerLibVersion",
-            dagger_android               : "com.google.dagger:dagger-android:$daggerLibVersion",
-            dagger_android_support       : "com.google.dagger:dagger-android-support:$daggerLibVersion",
+            dagger                  : "com.google.dagger:dagger:$daggerLibVersion",
+            dagger_android          : "com.google.dagger:dagger-android:$daggerLibVersion",
+            dagger_android_support  : "com.google.dagger:dagger-android-support:$daggerLibVersion",
             //指定注解处理器
-            dagger_compiler              : "com.google.dagger:dagger-compiler:$daggerLibVersion",
-            dagger_android_processor     : "com.google.dagger:dagger-android-processor:$daggerLibVersion",
+            dagger_compiler         : "com.google.dagger:dagger-compiler:$daggerLibVersion",
+            dagger_android_processor: "com.google.dagger:dagger-android-processor:$daggerLibVersion",
 
             /*buttern-knife*/
-            butterknife                  : 'com.jakewharton:butterknife:8.6.0',
-            butterknife_compiler         : 'com.jakewharton:butterknife-compiler:8.6.0',
+            butterknife             : 'com.jakewharton:butterknife:8.6.0',
+            butterknife_compiler    : 'com.jakewharton:butterknife-compiler:8.6.0',
 
             /*glide*/
-            glide                        : 'com.github.bumptech.glide:glide:4.3.1',
-            glide_compiler               : 'com.github.bumptech.glide:compiler:4.3.1',
+            glide                   : 'com.github.bumptech.glide:glide:4.3.1',
+            glide_compiler          : 'com.github.bumptech.glide:compiler:4.3.1',
 
             /*PhotoView*/
-            PhotoView                    : 'com.github.chrisbanes:PhotoView:1.3.0',
+            PhotoView               : 'com.github.chrisbanes:PhotoView:1.3.0',
 
             /*图表控件*/
-            MPAndroidChart               : 'com.github.PhilJay:MPAndroidChart:v3.0.3',
+            MPAndroidChart          : 'com.github.PhilJay:MPAndroidChart:v3.0.3',
 
-            fragmentation                : 'me.yokeyword:fragmentation:0.7.10',
+            fragmentation           : 'me.yokeyword:fragmentation:0.7.10',
 
             /*json解析*/
-            gson                         : 'com.google.code.gson:gson:2.8.2',
+            gson                    : 'com.google.code.gson:gson:2.8.2',
 
-            fastjson                     : 'com.alibaba:fastjson:1.2.44',
-            fastjson_android             : 'com.alibaba:fastjson:1.1.67.android',
+            fastjson                : 'com.alibaba:fastjson:1.2.44',
+            fastjson_android        : 'com.alibaba:fastjson:1.1.67.android',
 
-            logger                       : 'com.orhanobut:logger:2.1.1',
+            logger                  : 'com.orhanobut:logger:2.1.1',
 
-            eventbus                     : 'org.greenrobot:eventbus:3.1.1',
-            nineoldandroids_lib          : 'com.nineoldandroids:library:2.4.0',
+            eventbus                : 'org.greenrobot:eventbus:3.1.1',
+            nineoldandroids_lib     : 'com.nineoldandroids:library:2.4.0',
 
-            utilcode                     : 'com.blankj:utilcode:1.12.5',
+            utilcode                : 'com.blankj:utilcode:1.12.5',
 
-            BaseRecyclerViewAdapterHelper: 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12'
+            BaseRecyclerViewAdapter : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12',
+
+            indicatorseekbar        : 'com.github.warkiz.widget:indicatorseekbar:1.2.5',
+
+            RecyclerViewPager       : 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.2@aar',
+
+            tablayoutsupport        : 'com.github.lsjwzh.RecyclerViewPager:tablayoutsupport:v1.1.2@aar'
     ]
 }
 
