分类效果实现

--- a/ViewModules/RecyclerViewDemo/src/main/AndroidManifest.xml
+++ b/ViewModules/RecyclerViewDemo/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".ui.activity.MaterialRecyclerViewPagerActivity"
             android:theme="@style/AppMaterial" />
+
+        <activity android:name=".ui.activity.CategoryFJMtSortButtonActivity"/>
+        <activity android:name=".ui.activity.CategoryFJMtDynamicSoreViewActivity"/>
     </application>
 
 </manifest>
