--- a/ViewModules/RecyclerViewDemo/build.gradle
+++ b/ViewModules/RecyclerViewDemo/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile rootProject.ext.ext_tools.BaseRecyclerViewAdapter
     compile rootProject.ext.ext_tools.RecyclerViewPager
     compile rootProject.ext.ext_tools.tablayoutsupport
+    compile rootProject.ext.ext_tools.FJMtSortButton
 
     implementation project(':LibModules:commonlib')
 }
