--- a/ViewModules/RecyclerViewDemo/src/main/AndroidManifest.xml
+++ b/ViewModules/RecyclerViewDemo/src/main/AndroidManifest.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.rcv">
+          package="com.example.rcv">
 
     <application
-        android:name="com.example.common.corel.BaseApp"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+            android:name="com.example.common.corel.BaseApp"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".UseAdvanceActivity" />
-        <activity android:name=".UseBasicActivity" />
-        <activity android:name=".ui.activity.BasicUseRecyclerViewPagerActivity" />
-        <activity android:name=".ui.activity.FreeFlingRecyclerViewPagerActivity" />
+        <activity android:name=".ui.activity.UseAdvanceActivity"/>
+        <activity android:name=".ui.activity.UseBasicActivity"/>
+        <activity android:name=".ui.activity.BasicUseRecyclerViewPagerActivity"/>
+        <activity android:name=".ui.activity.FreeFlingRecyclerViewPagerActivity"/>
         <activity
-            android:name=".ui.activity.MaterialRecyclerViewPagerActivity"
-            android:theme="@style/AppMaterial" />
+                android:name=".ui.activity.MaterialRecyclerViewPagerActivity"
+                android:theme="@style/AppMaterial"/>
 
         <activity android:name=".ui.activity.CategoryFJMtSortButtonActivity"/>
         <activity android:name=".ui.activity.CategoryFJMtDynamicSoreViewActivity"/>
+        <activity
+                android:name=".ui.FJNestedHoverTabActivity"
+                android:theme="@style/AppMaterial"
+                />
+        <activity android:name=".ui.activity.FJEditTextCountActivity"/>
     </application>
 
 </manifest>
