--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,12 @@
+//include ':Fasthub'
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
 
 loadLibs()
-//loadAppModule()
+loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
 //loadDesignpatternModule()
-loadViewModule()
+//loadViewModule()
 
 //loadJeeModule()
 //loadInteriewModule()
