--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
 
 loadLibs()
-loadAppModule()
+//loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
 //loadDesignpatternModule()
@@ -13,3 +13,4 @@ loadAppModule()
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
+loadToolAppModule()
