--- a/ToolAppModule/FileTransferAssistant/build.gradle
+++ b/ToolAppModule/FileTransferAssistant/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation rootProject.ext.ext_tools.gson
 
     compile rootProject.ext.ext_tools.logger
+    implementation rootProject.ext.ext_tools.BaseRecyclerViewAdapter
+    implementation rootProject.ext.ext_tools.ringprogressbar
 
     implementation project(':LibModules:commonlib')
 
