--- a/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity
+                android:name=".HomeActivity"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -31,7 +33,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".FtpHomeActivity"/>
-        <activity android:name=".FtpFileListActivity"/>
+        <activity
+                android:name=".FtpFileListActivity"
+                android:theme="@style/theme_customer"
+                />
     </application>
 
 </manifest>
