--- a/ext.gradle
+++ b/ext.gradle
@@ -78,6 +78,10 @@ project.ext {
             glide                   : 'com.github.bumptech.glide:glide:4.3.1',
             glide_compiler          : 'com.github.bumptech.glide:compiler:4.3.1',
 
+            fresco                  : 'com.facebook.fresco:fresco:0.8.+',
+
+            picasso                 : 'com.squareup.picasso:picasso:2.71828',
+
             /*PhotoView*/
             PhotoView               : 'com.github.chrisbanes:PhotoView:1.3.0',
 
@@ -103,13 +107,31 @@ project.ext {
             jsoup                   : 'org.jsoup:jsoup:1.10.3',
 
             BaseRecyclerViewAdapter : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12',
-
+            haorefresh              : 'com.github.fangx:haorefresh:1.0',
             indicatorseekbar        : 'com.github.warkiz.widget:indicatorseekbar:1.2.5',
 
             RecyclerViewPager       : 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.2@aar',
 
             tablayoutsupport        : 'com.github.lsjwzh.RecyclerViewPager:tablayoutsupport:v1.1.2@aar',
-            FJMtSortButton          : 'com.github.FJ917:FJMtSortButton:v1.1'
+            FJMtSortButton          : 'com.github.FJ917:FJMtSortButton:v1.1',
+            aviLib                  : 'com.wang.avi:library:1.0.1',
+
+            systembartint           : 'com.readystatesoftware.systembartint:systembartint:1.0.3',
+            //otto
+            otto                    : 'com.squareup:otto:1.3.8',
+
+            //greendao
+            greendao                : 'de.greenrobot:greendao:2.1.0',
+
+            jsbridge                : 'com.github.lzyzsd:jsbridge:1.0.4',
+            expandabletextview      : 'cn.carbs.android:ExpandableTextView:1.0.3',
+            ringprogressbar         : 'com.github.HotBitmapGG:RingProgressBar:V1.2.3',
+            stepview                : 'com.github.baoyachi:StepView:1.9',
+
+            /*视频播放器*/
+            jiecaovideoplayer       : 'fm.jiecao:jiecaovideoplayer:5.8.1',
+            vitamio                 : 'com.charonchui.vitamio:vitamio:4.2.2',
+
     ]
 }
 
