--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -47,8 +47,8 @@ private void loadToolAppModule() {
     def file = new File("ToolAppModule/")
     include ':ToolAppModule'
     project(":ToolAppModule").projectDir = file
-//    include ':ToolAppModule:FileTransferAssistant'
-    include ':ToolAppModule:BitmapAssistant'
+    include ':ToolAppModule:FileTransferAssistant'
+//    include ':ToolAppModule:BitmapAssistant'
 //    include ':ToolAppModule:NetworkDebugger'
 }
 
