--- a/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
@@ -52,6 +52,15 @@
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
             </intent-filter>
 
+            <intent-filter>
+                <action android:name = "android.nfc.action.NDEF_DISCOVERED" />
+                <data android:mimeType = "text/plain" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
             <meta-data
                 android:name="android.nfc.action.TECH_DISCOVERED"
                 android:resource="@xml/nfc_tech_filter" />
