--- a/LibModules/commonlib/build.gradle
+++ b/LibModules/commonlib/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
 
 android {
     compileSdkVersion rootProject.ext._android.compileSdkVersion as Integer
@@ -17,6 +18,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+ext {
+    // 从Github上clone下来的项目的本地地址
+    // GITHUB_REPO_PATH = "F:\\workspace\\as\\zzg\\zysdk"
+    GITHUB_REPO_PATH = "F:\\workspace\\as\\zzg\\maven_repo_sdk\\repository"
+    // compile 'com.audienl:super_library:1.0.0'
+    PUBLISH_GROUP_ID = 'com.szzynt'
+    PUBLISH_ARTIFACT_ID = 'common_lib'
+    PUBLISH_VERSION = '1.0.0'
 }
 
 dependencies {
@@ -48,4 +59,26 @@ dependencies {
     // (注：从2.1.5开始要分开Bugly SDK和NDK的配置）
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        def deployPath = file(project.GITHUB_REPO_PATH)
+        repository(url: "file://${deployPath.absolutePath}")
+        pom.project {
+            groupId project.PUBLISH_GROUP_ID
+            artifactId project.PUBLISH_ARTIFACT_ID
+            version project.PUBLISH_VERSION
+        }
+    }
+}
+
+// 源代码一起打包(不需要打包源代码的不要添加这几行)
+task androidSourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
+
+artifacts {
+    archives androidSourcesJar
 }
