common_lib工程废弃，使用在线jitpack发布的库，以后会同步更新

--- a/AppModules/SharingBike/build.gradle
+++ b/AppModules/SharingBike/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     annotationProcessor rootProject.ext.ext_tools.dagger_compiler
     annotationProcessor rootProject.ext.ext_tools.dagger_android_processor
 
-    implementation project(':LibModules:commonlib')
+    compile 'com.github.syusikoku:ZYSdk:v1.0.0'
 
     /*butternife*/
     implementation rootProject.ext.ext_tools.glide
