--- a/ToolAppModule/BitmapAssistant/build.gradle
+++ b/ToolAppModule/BitmapAssistant/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation rootProject.ext.ext_tools.BaseRecyclerViewAdapter
     implementation rootProject.ext.ext_tools.ringprogressbar
 
-    implementation project(':LibModules:commonlib')
+    compile 'com.github.syusikoku:ZYSdk:v1.0.0'
 
     implementation rootProject.ext.ext_tools.glide
     annotationProcessor rootProject.ext.ext_tools.glide_compiler
