--- a/AppModules/mftpclient/build.gradle
+++ b/AppModules/mftpclient/build.gradle
@@ -43,5 +43,5 @@ dependencies {
 
     compile rootProject.ext.ext_tools.logger
 
-    implementation project(':LibModules:commonlib')
+    compile 'com.github.syusikoku:ZYSdk:v1.0.0'
 }
