--- a/KotlinAppModules/HelloKt/build.gradle
+++ b/KotlinAppModules/HelloKt/build.gradle
@@ -44,5 +44,5 @@ dependencies {
 
     compile rootProject.ext.ext_tools.logger
 
-    implementation project(':LibModules:commonlib')
+    compile 'com.github.syusikoku:ZYSdk:v1.0.0'
 }
