--- a/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
@@ -1,70 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fta">
+          package="com.example.fta">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 
-    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.NFC"/>
 
     <uses-feature
-        android:name="android.hardware.nfc"
-        android:required="true" />
+            android:name="android.hardware.nfc"
+            android:required="true"/>
 
     <application
-        android:name="com.zhiyangstudio.sdklibrary.common.corel.BaseApp"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:name="com.zhiyangstudio.sdklibrary.common.corel.BaseApp"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <activity
-            android:name=".HomeActivity"
-            android:launchMode="singleInstance">
+                android:name=".ui.activity.HomeActivity"
+                android:launchMode="singleInstance">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
         </activity>
-        <activity android:name=".FtpHomeActivity" />
+        <activity android:name=".ui.activity.FtpHomeActivity"/>
         <activity
-            android:name=".FtpFileListActivity"
-            android:theme="@style/theme_customer" />
+                android:name=".ui.activity.FtpFileListActivity"
+                android:theme="@style/theme_customer"/>
 
         <activity
-            android:name=".NFCHomeActivity"
-            android:launchMode="singleTop">
+                android:name=".ui.activity.NFCHomeActivity"
+                android:launchMode="singleTop">
 
             <intent-filter>
-                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
             </intent-filter>
 
             <intent-filter>
-                <action android:name = "android.nfc.action.NDEF_DISCOVERED" />
-                <data android:mimeType = "text/plain" />
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <data android:mimeType="text/plain"/>
             </intent-filter>
 
             <intent-filter>
                 <action android:name="android.nfc.action.TAG_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
+
             <meta-data
-                android:name="android.nfc.action.TECH_DISCOVERED"
-                android:resource="@xml/nfc_tech_filter" />
+                    android:name="android.nfc.action.TECH_DISCOVERED"
+                    android:resource="@xml/nfc_tech_filter"/>
         </activity>
+
+        <activity android:name=".ui.activity.WifiHomeActivity"/>
+        <activity android:name=".ui.activity.Socket1HomeActivity"/>
+        <activity android:name=".ui.activity.WifiHotspotHomeActivity"/>
+        <activity android:name=".ui.activity.WifiHotspotSendFilesActivity"/>
+        <activity android:name=".ui.activity.WifiHotspotReceiveFilesActivity"/>
     </application>
 
 </manifest>
