wifi传输发送端功能添加

--- a/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".ui.activity.WifiHotspotHomeActivity"/>
         <activity android:name=".ui.activity.WifiHotspotSendFilesActivity"/>
         <activity android:name=".ui.activity.WifiHotspotReceiveFilesActivity"/>
+        <activity android:name=".ui.activity.HttpHomeActivity"/>
     </application>
 
 </manifest>
