--- a/ToolAppModule/BitmapAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/BitmapAssistant/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.zhiyangstudio.commonlib.corel.BaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.zhiyangstudio.sdklibrary.common.corel.BaseApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
