--- a/ToolAppModule/HardwareAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/HardwareAssistant/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bmpa">
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.hwa">
 
     <application
         android:name="com.zhiyangstudio.commonlib.corel.BaseApp"
@@ -15,16 +10,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PicCropScaleActivity" />
-        <activity android:name=".PicDownloadActivity" />
-        <activity android:name=".PicUploadActivity" />
     </application>
 
 </manifest>
