硬件助手-wifi工具功能实现

--- a/ToolAppModule/HardwareAssistant/src/main/AndroidManifest.xml
+++ b/ToolAppModule/HardwareAssistant/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hwa">
 
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name="com.zhiyangstudio.commonlib.corel.BaseApp"
         android:allowBackup="true"
@@ -17,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.BlueBoothManageActivity" />
+        <activity android:name=".ui.activity.WifiManageActivity" />
     </application>
 
 </manifest>
