玩转andorid项目添加

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include ':ZySdkLib'
 project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
 loadLibs()
-loadAppModule()
+//loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
 //loadDesignpatternModule()
@@ -15,4 +15,5 @@ loadAppModule()
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
-loadToolAppModule()
+//loadToolAppModule()
+loadMvpModule()
