--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+ org.gradle.parallel=true
 #Fri Apr 06 09:44:54 CST 2018
 org.gradle.jvmargs=-Xmx1536m
