--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
 include ':ZySdkLib'
-project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
+//project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
+project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
 loadLibs()
 //loadAppModule()
