--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 apply from: "ext.gradle"
 
 buildscript {
+    ext.kotlin_version = '1.2.31'
     ext.kotlin_version = '1.1.60'
     repositories {
         google()
