玩转andorid首页功能实现，轮播图列表和数据列表数据获取

--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -151,6 +151,7 @@ private void loadMvpModules() {
     include ':MvpModules'
     project(":MvpModules").projectDir = file
     include ':MvpModules:WanAndroid'
+//    include ':MvpModules:BaiLan'
 }
 
 ext {
