web浏览及搜索界面功能实现

--- a/MvpModules/WanAndroid/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroid/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.HomeActivity" />
+        <activity android:name=".ui.activity.WebViewActivity" />
+        <activity android:name=".ui.activity.SearchActivity" />
     </application>
 
 </manifest>
