--- a/MvpModules/WanAndroid/build.gradle
+++ b/MvpModules/WanAndroid/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation rootProject.ext.ext_tools.okhttp
     implementation rootProject.ext.ext_tools.logging_interceptor
 
+    implementation rootProject.ext.ext_tools.agentweb
+
     compile project(':ZySdkLib')
 
 //    compile 'com.github.syusikoku:ZYSdk:v1.0.8'
