--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -151,6 +151,7 @@ private void loadMvpModules() {
     include ':MvpModules'
     project(":MvpModules").projectDir = file
     include ':MvpModules:WanAndroid'
+//    include ':MvpModules:WeiBo'
 //    include ':MvpModules:BaiLan'
 }
 
