--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
-include ':ZySdkLib',':TestLibApp'
-project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
-//project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
+include ':ZySdkLib'
+//project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
+project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
 loadLibs()
 //loadAppModule()
@@ -16,5 +16,5 @@ loadLibs()
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
-//loadToolAppModule()
+loadToolAppModule()
 //loadMvpModule()
