搜索结果展示列表问题修复

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,5 @@ loadLibs()
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
-loadToolAppModule()
-//loadMvpModule()
+//loadToolAppModule()
+loadMvpModule()
