--- a/MvpModules/WanAndroid/build.gradle
+++ b/MvpModules/WanAndroid/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     implementation rootProject.ext.ext_tools.utilcode
     implementation rootProject.ext.ext_tools.gson
+    implementation rootProject.ext.ext_tools.systembartint
 
     compile rootProject.ext.ext_tools.logger
     implementation rootProject.ext.ext_tools.fragmentation
