--- a/MvpModules/WanAndroid/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroid/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.activity.WebViewActivity" />
         <activity android:name=".ui.activity.SearchActivity" />
+        <activity android:name=".ui.activity.TreeActivity" />
     </application>
 
 </manifest>
