玩android美化版项目工程重构

--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -152,7 +152,8 @@ private void loadMvpModules() {
     include ':MvpModules'
     project(":MvpModules").projectDir = file
     include ':MvpModules:WanAndroid'
-//    include ':MvpModules:WeiBo'
+    include ':MvpModules:WanAndroidAdvance'
+//    include ':MvpModules:WeiBo'说说啥
 //    include ':MvpModules:BaiLan'
 }
 
